changing header background color to work better with the fullstory logo

--- a/sample_app/styles/index.css
+++ b/sample_app/styles/index.css
@@ -20,7 +20,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #D44B92;
+  background-color: #4c5f88;
   color: #fff;
   font-family: museosanscyrl-700, sans-serif;
   font-size: 1rem;
