--- a/feedback-portal/src/App.css
+++ b/feedback-portal/src/App.css
@@ -17,7 +17,7 @@ header h1 {
 }
 
 footer {
-  background-color: #973999;
+  background-color: #4c5f88;
   height: 3em;
   width: 100%;
   margin-top: 1.5em;
